Fixed layout issue.
- Study list panel size expands when navigating between pages.

--- a/ImageServer/Web/Application/App_Themes/ClearCanvas/Layout.css
+++ b/ImageServer/Web/Application/App_Themes/ClearCanvas/Layout.css
@@ -11,7 +11,7 @@
 
 .CSSPageWindow
 {
-	width:1000px;
+	width:100%;
 }
 
 
