--- a/ImageServer/Web/Application/App_Themes/NightSafari/Layout.css
+++ b/ImageServer/Web/Application/App_Themes/NightSafari/Layout.css
@@ -10,7 +10,7 @@
 *************************************************************************************************/
 .CSSPageWindow
 {
-	width:90%;
+	width:100%;
 }
 
 
